@@ -585,168 +585,6 @@ static void Schwarz_levels (INT inroot,
     *nlvl = lvl;
 }
 
-#if 0 // TODO: Need to remove this! --Chensong
-/**
- * \fn INT fasp_Schwarz_setup (Schwarz_data *Schwarz, INT mmsize,
- *                             INT maxlev, INT Schwarz_type)
- *
- * \brief Setup phase for the Schwarz methods
- *
- * \param Schwarz        Pointer to the Schwarz data
- * \param mmsize         Max block size
- * \param maxlev         Max number of levels
- * \param Schwarz_type   Type of the Schwarz method
- *
- * \return               FASP_SUCCESS if succeed
- *
- * \author Ludmil, Xiaozhe Hu
- * \date   03/22/2011
- *
- * Modified by Chunsheng Feng, Zheng Li on 08/28/2012
- */
-static INT fasp_Schwarz_setup (Schwarz_data *Schwarz,
-                               INT mmsize,
-                               INT maxlev,
-                               INT Schwarz_type)
-{
-    // information about A
-    dCSRmat A = Schwarz->A;
-    INT n   = A.row;
-    INT *ia = A.IA;
-    INT *ja = A.JA;
-    REAL *a = A.val;
-    
-    // local variables
-    INT n1=n+1,i;
-    INT inroot=-10,nsizei=-10,nsizeall=-10,nlvl=0;
-    INT maxbs=0;
-    INT *jb=NULL;
-    ivector MIS;
-    
-    // data for Schwarz method
-    INT nblk;
-    INT *iblock=NULL, *jblock=NULL, *mask=NULL, *maxa=NULL;
-    REAL *au=NULL, *al=NULL, *rhsloc=NULL;
-    INT memt=0;
-    
-    // return
-    INT flag = 0;
-    
-#if DEBUG_MODE > 0
-    printf("### DEBUG: %s ...... [Start]\n", __FUNCTION__);
-#endif
-    
-    // allocate memory
-    maxa    = (INT *)fasp_mem_calloc(n1,sizeof(INT));
-    mask    = (INT *)fasp_mem_calloc(n1,sizeof(INT));
-    iblock  = (INT *)fasp_mem_calloc(n1,sizeof(INT));
-    jblock  = (INT *)fasp_mem_calloc(n1,sizeof(INT));
-    
-    nsizeall=0;
-    memset(mask,   0, sizeof(INT)*n1);
-    memset(iblock, 0, sizeof(INT)*n1);
-    memset(maxa,   0, sizeof(INT)*n1);
-    
-    maxa[0]=1;
-    
-    MIS = fasp_sparse_MIS(&A);
-    
-    /*-------------------------------------------*/
-    // find the blocks
-    /*-------------------------------------------*/
-    // first pass
-    for ( i = 0; i < MIS.row; i++ ) {
-        // for each node do a maxlev level sets out
-        inroot = MIS.val[i]+1;
-        levels_(&inroot,ia,ja,mask,&nlvl,maxa,jblock,&maxlev);
-        nsizei=maxa[nlvl]-1;
-        nsizeall+=nsizei;
-    }
-    
-#if DEBUG_MODE > 1
-    fprintf(stdout,"### DEBUG: nsizeall is: %d\n",nsizeall);
-#endif
-    
-    /* We only calculated the size of this up to here. So we can reallocate jblock */
-    jblock  = (INT *)fasp_mem_realloc(jblock,(nsizeall+n)*sizeof(INT));
-    
-    // second pass
-    /* we redo the same again, but this time we store in jblock */
-    maxa[0]=1;
-    iblock[0]=1;
-    nsizeall=0;
-    jb=jblock;
-    for (i=0;i<MIS.row;i++) {
-        inroot = MIS.val[i]+1;
-        levels_(&inroot,ia,ja,mask,&nlvl,maxa,jb,&maxlev);
-        nsizei=maxa[nlvl]-1;
-        iblock[i+1]=iblock[i]+nsizei;
-        nsizeall+=nsizei;
-        jb+=nsizei;
-    }
-    
-    nblk = MIS.row;
-    
-#if DEBUG_MODE > 1
-    fprintf(stdout,"### DEBUG: nsizeall = %d, %d\n",nsizeall,iblock[nblk]-1);
-    fprintf(stdout,"### DEBUG: nnz = %d\n",ia[n]-1);
-#endif
-    
-    /*-------------------------------------------*/
-    //  LU decomposition of blocks
-    /*-------------------------------------------*/
-    n1 = (nblk + iblock[nblk]-1);
-    
-    maxa = (INT *)fasp_mem_realloc(maxa,n1*sizeof(INT));
-    
-    memset(maxa, 0, sizeof(INT)*n1);
-    memset(mask, 0, sizeof(INT)*n);
-    
-    // first estimate the memroy we need.
-    mxfrm2_(&n,ia,ja,&nblk,iblock,jblock,mask,maxa,&memt,&maxbs);
-    
-#if DEBUG_MODE > 1
-    fprintf(stdout,"### DEBUG: Number of nonzeros for LU = %d maxbs = %d\n",
-            memt, maxbs);
-#endif
-    
-    // allocate the memory
-    al     = (REAL *)fasp_mem_calloc(memt,  sizeof(REAL));
-    au     = (REAL *)fasp_mem_calloc(memt,  sizeof(REAL));
-    rhsloc = (REAL *)fasp_mem_calloc(maxbs, sizeof(REAL));
-    
-    //  LU decomposition
-    sky2ns_(&n,ia,ja,a,&nblk,iblock,jblock,mask,maxa,au,al);
-    
-#if DEBUG_MODE > 1
-    fprintf(stdout,"### DEBUG: n = %d, #blocks = %d, max block size = %d\n",
-            n, nblk, maxbs);
-#endif
-    
-    /*-------------------------------------------*/
-    //  return
-    /*-------------------------------------------*/
-    Schwarz->nblk = nblk;
-    Schwarz->iblock = iblock;
-    Schwarz->jblock = jblock;
-    Schwarz->rhsloc = rhsloc;
-    Schwarz->au = au;
-    Schwarz->al = al;
-    
-    Schwarz->Schwarz_type = Schwarz_type;
-    Schwarz->memt = memt;
-    Schwarz->mask = mask;
-    Schwarz->maxa = maxa;
-    
-#if DEBUG_MODE > 0
-    printf("### DEBUG: %s ...... [Finish]\n", __FUNCTION__);
-#endif
-    
-    return flag;
-}
-
-#endif
-
 /*---------------------------------*/
 /*--        End of File          --*/
 /*---------------------------------*/
