@@ -3,7 +3,7 @@
     1193 ./base/include/fasp.h
      666 ./base/include/fasp_block.h
      253 ./base/include/fasp_const.h
-    2947 ./base/include/fasp_functs.h
+    2944 ./base/include/fasp_functs.h
       47 ./base/include/forts_ns.h
       76 ./base/include/hb_io.h
     5818 ./base/include/malloc.c.h
@@ -22,7 +22,7 @@
      328 ./base/src/amg_solve.c
      945 ./base/src/amlirecur.c
      264 ./base/src/array.c
-     234 ./base/src/auxiliary.c
+     235 ./base/src/auxiliary.c
      427 ./base/src/blas_array.c
      353 ./base/src/blas_bcsr.c
     5409 ./base/src/blas_bsr.c
@@ -38,14 +38,14 @@
       72 ./base/src/eigen.c
      106 ./base/src/famg.c
      328 ./base/src/fmgcycle.c
-    1145 ./base/src/formats.c
+    1004 ./base/src/formats.c
       79 ./base/src/givens.c
     1038 ./base/src/gmg_poisson.c
      756 ./base/src/graphics.c
      427 ./base/src/ilu_setup_bsr.c
      193 ./base/src/ilu_setup_csr.c
     1254 ./base/src/ilu_setup_str.c
-     331 ./base/src/init.c
+     332 ./base/src/init.c
      792 ./base/src/input.c
     1597 ./base/src/interpolation.c
      840 ./base/src/interpolation_em.c
@@ -83,9 +83,9 @@
      339 ./base/src/pvgmres_mf.c
      874 ./base/src/quadrature.c
      116 ./base/src/rap.c
-     752 ./base/src/schwarz_setup.c
+     590 ./base/src/schwarz_setup.c
      798 ./base/src/smat.c
-    1608 ./base/src/smoother_bsr.c
+    1600 ./base/src/smoother_bsr.c
     2314 ./base/src/smoother_csr.c
       83 ./base/src/smoother_csr_cr.c
      586 ./base/src/smoother_csr_poly.c
@@ -96,7 +96,7 @@
     1540 ./base/src/sparse_csr.c
       72 ./base/src/sparse_csrl.c
      204 ./base/src/sparse_str.c
-     970 ./base/src/sparse_util.c
+     972 ./base/src/sparse_util.c
     1627 ./base/src/spbcgs.c
     1063 ./base/src/spcg.c
     1386 ./base/src/spgmres.c
@@ -105,5 +105,5 @@
      171 ./base/src/threads.c
       41 ./base/src/timing.c
      464 ./base/src/vec.c
-     304 ./base/src/wrapper.c
-   90926 total
+     302 ./base/src/wrapper.c
+   90614 total
