@@ -1,8 +1,10 @@
 File Name: CHANGES
 
-10/04/2015 FASP 1.8.1:
+10/05/2015 FASP 1.8.1:
 - Add `const' to declaring constant variables.
 - Check regression results.
+- Check and remove a few deprecated functions.
+- Update Doxygen.
 
 09/30/2015 FASP 1.8.0:
 - Fix Clang warnings when comparing an address with NULL.
